# community-management-system

./: .gitignore  CMakeLists.txt  README.md  bus_test  ecms
include/: bus.h  defs.h  facility.h  fflag.h  linked_list.h  location.h  member.h  path.h  queue.h  room.h  staff.h
src/: bus.c  checkin.c  clear_sh.c  init.c  linked_list.c  linked_list_template.c  main.c  main_ui.c  member.c  path.c  qsort.c  queue_template.c  quick_sort.c  read_file.c  room.c  staff.c  util.c
